--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                 Developed a real-time object pose estimation system using RealSense camera,
                 YOLO detection, and custom PnP solver integrated with ABB robot.
             </p>
-            <a href="#" class="btn">View Project</a>
+            <a href="projects.html" class="btn">View Projects</a>
         </div>
 
         <div class="card">
