--- a/projects.html
+++ b/projects.html
@@ -120,10 +120,10 @@
         </p>
 
         <div class="media-row">
-            <img src="pose.jpg" alt="6D Pose Estimation">
+            <img src="Aruco Marker Detection .jpg" alt="6D Pose Estimation">
             
             <video controls>
-                <source src="pose-demo.mp4" type="video/mp4">
+                <source src="Vision_Video.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </div>
