--- a/projects.html
+++ b/projects.html
@@ -130,8 +130,8 @@
 
         <h3 class="subheading">Technologies</h3>
         <ul>
-            <li>Intel RealSense RGB-D sensing</li>
-            <li>YOLO-based detection + custom PnP solver</li>
+            <li>Implemented YOLO-based object detection combined with a custom PnP solver to compute accurate 6D object pose estimation.</li>
+            <li>Performed camera-to-robot hand–eye calibration to transform object coordinates from the camera frame to the robot base frame.</li>
             <li>Camera-to-robot calibration (hand–eye transformation)</li>
             <li>Python trajectory generation with ABB RAPID socket communication</li>
         </ul>
