--- a/projects.html
+++ b/projects.html
@@ -128,19 +128,17 @@
             </video>
         </div>
 
-        <h3 class="subheading">Technologies</h3>
+        <h3 class="subheading">Technologies & Impact</h3>
         <ul>
+            <li>Utilized Intel RealSense RGB-D camera for synchronized real-time 3D perception.</li>
             <li>Implemented YOLO detection with custom PnP solver for accurate 6D pose estimation.</li>
-            <li>Performed hand–eye calibration to transform camera coordinates into robot base frame.</li>
-            <li>Camera-to-robot calibration (hand–eye transformation)</li>
-            <li>Python trajectory generation with ABB RAPID socket communication</li>
+            <li>Performed hand–eye calibration to transform camera coordinates into robot base frame</li>
+            <li>Developed Python trajectory generation with ABB RAPID socket-based robot communication.</li>
+            <li>Achieved sub-centimeter pose estimation accuracy across repeated operational cycles.</li>
+            <li>Eliminated manual robot re-teaching across multiple production cycles</li>
         </ul>
 
-        <h3 class="subheading">Impact</h3>
-        <ul>
-            <li>Sub-centimeter pose accuracy</li>
-            <li>Eliminated manual re-teaching between cycles</li>
-        </ul>
+        
     </div>
 
 
