--- a/projects.html
+++ b/projects.html
@@ -71,14 +71,15 @@
         display: flex;
         justify-content: center;   /* centers horizontally */
         align-items: center;
-        gap: 30px;
-        margin: 20px 0;
+        gap: 40px;
+        margin: 30px 0;
     }
 
     .media-row img,
     .media-row video {
-        width: 45%;
-        max-width: 600px;
+        width: 500px;      /* Set exact same width */
+        height: 300px;     /* Same height */
+        object-fit: cover;
         border-radius: 12px;
     }
 
