--- a/projects.html
+++ b/projects.html
@@ -148,12 +148,12 @@
 
     <!-- ABB OPC UA Project -->
     <div class="project">
-        <h2>ABB Robot Control via OPC UA</h2>
+        <h2>Intelligent Vision-Guided Sorting Using Dobot MG400</h2>
 
         <h3 class="subheading">Challenge</h3>
         <p>
-            Develop secure and reliable communication between ROS2-based perception
-            system and ABB industrial robot without using EGM.
+            Enable automated classification and sorting of objects based on material 
+            type and shape using a robotic manipulator instead of manual sorting.
         </p>
 
         <div class="media-row">
@@ -164,12 +164,14 @@
             </video>
         </div>
 
-        <h3 class="subheading">Technologies</h3>
+        <h3 class="subheading">Technologies & Impact</h3>
         <ul>
-            <li>ROS2 communication framework</li>
-            <li>OPC UA Gateway integration</li>
-            <li>TCP socket-based data exchange</li>
-            <li>Industrial PLC interfacing</li>
+            <li>Utilized computer vision for object detection and classification across multiple attributes</li>
+            <li>Integrated Dobot MG400 robot using Modbus communication for real-time control.</li>
+            <li>Developed control logic supporting operation via Python, Lua, or MATLAB environments.</li>
+            <li>Implemented multi-criteria sorting for metal, non-metal, color, and geometric shape categories</li>
+            <li>Reduced manual sorting effort and improved repeatability across continuous cycles.<li>
+            <li>Created a modular sorting cell adaptable to different industrial classification tasks.<li>
         </ul>
 
         <h3 class="subheading">Impact</h3>
