--- a/projects.html
+++ b/projects.html
@@ -170,8 +170,8 @@
             <li>Integrated Dobot MG400 robot using Modbus communication for real-time control.</li>
             <li>Developed control logic supporting operation via Python, Lua, or MATLAB environments.</li>
             <li>Implemented multi-criteria sorting for metal, non-metal, color, and geometric shape categories</li>
-            <li>Reduced manual sorting effort and improved repeatability across continuous cycles.<li>
-            <li>Created a modular sorting cell adaptable to different industrial classification tasks.<li>
+            <li>Reduced manual sorting effort and improved repeatability across continuous cycles.</li>
+            <li>Created a modular sorting cell adaptable to different industrial classification tasks.</li>
         </ul>
 
         
