--- a/projects.html
+++ b/projects.html
@@ -157,10 +157,10 @@
         </p>
 
         <div class="media-row">
-            <img src="abb.jpg" alt="ABB Robot Control">
+           
             
             <video controls>
-                <source src="abb-demo.mp4" type="video/mp4">
+                <source src="dobot-port(1).mp4" type="video/mp4">
             </video>
         </div>
 
