--- a/projects.html
+++ b/projects.html
@@ -181,8 +181,10 @@
         </p>
 
         <div class="media-row">
+            <img src="Yanshee.jpg" alt="6D Pose Estimation">
+            
             <video controls>
-                <source src="yanshee.mp4" type="video/mp4">
+                <source src="yanshee-pushups.mp4" type="video/mp4">
             </video>
         </div>
 
