--- a/projects.html
+++ b/projects.html
@@ -181,7 +181,7 @@
         </p>
 
         <div class="media-row">
-            <img src="Yanshee.jpg" alt="6D Pose Estimation">
+            <img src="yanshee.jpg" alt="6D Pose Estimation">
             
             <video controls>
                 <source src="yanshee-pushups.mp4" type="video/mp4">
