--- a/projects.html
+++ b/projects.html
@@ -73,7 +73,6 @@
         align-items: center;
         gap: 40px;
         margin: 30px 0;
-        flex-wrap: wrap;
     }
 
     .media-row img,
@@ -182,7 +181,7 @@
 
         <div class="media-row">
             <video controls>
-                <source src="yanshee.mp4" type="video/mp4">
+                <source src="Yanshee.mp4" type="video/mp4">
             </video>
         </div>
 
