--- a/projects.html
+++ b/projects.html
@@ -180,8 +180,10 @@
         </p>
 
         <div class="media-row">
+            <img src="yanshee.mp4" alt="6D Pose Estimation">
+            
             <video controls>
-                <source src="Yanshee.mp4" type="video/mp4">
+                <source src="yanshee-pushups.mp4" type="video/mp4">
             </video>
         </div>
 
@@ -208,6 +210,7 @@
         </p>
 
         <div class="media-row">
+            
             <video controls>
                 <source src="AR.mp4" type="video/mp4">
             </video>
