--- a/projects.html
+++ b/projects.html
@@ -180,7 +180,7 @@
         </p>
 
         <div class="media-row">
-            <img src="yanshee.mp4" alt="6D Pose Estimation">
+            <img src="yanshee.jpg" alt="6D Pose Estimation">
             
             <video controls>
                 <source src="yanshee-pushups.mp4" type="video/mp4">
