--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
 
     <nav>
         <a href="#about">About</a>
-        <a href="#projects">Projects</a>
-        <a href="#competitions">Competitions</a>
+        <a href="projects.html">Projects</a>
+        <a href="competitions.html">Competitions</a>
         <a href="#contact">Contact</a>
     </nav>
 </header>
