--- a/competitions.html
+++ b/competitions.html
@@ -100,6 +100,14 @@
         background-color: #1e293b;
         color: #94a3b8;
     }
+
+    .team {
+    color: #94a3b8;
+    font-size: 0.95rem;
+    margin-top: -6px;
+    margin-bottom: 18px;
+    letter-spacing: 0.5px;
+    }
 </style>
 </head>
 
@@ -115,6 +123,7 @@
     <div class="competition">
         <h2>RoboCup ARM Challenge 2023</h2>
         <div class="location">Bordeaux, France</div>
+        <p class="team">Team: Dragons 77</p>
 
         <h3 class="subheading">Challenge</h3>
         <p>
