--- a/competitions.html
+++ b/competitions.html
@@ -121,9 +121,9 @@
 <section>
 
     <div class="competition">
-        <h2>RoboCup ARM Challenge 2023</h2>
-        <div class="location">Bordeaux, France</div>
-        <p class="team">Team: Dragons 77</p>
+        <h2>RoboCup ARM Challenge 2023 - Bordeaux, France</h2>
+        <div class="location">Dragons 77</div>
+        
 
         <h3 class="subheading">Challenge</h3>
         <p>
