--- a/competitions.html
+++ b/competitions.html
@@ -157,11 +157,11 @@
         <div class="media-grid">
             <div class="top-row">
                 <img src="GroupPhoto.jpg" alt="Robot Grasping">
-                <img src="robot-setup.jpg" alt="Object Sorting">
+                <img src="robot-setup.jpeg" alt="Object Sorting">
             </div>
 
             <div class="bottom-row">
-                <img src="Screenshot(682).jpg" alt="Full Arena Setup">
+                <img src="Screenshot(682).png" alt="Full Arena Setup">
             </div>
         </div>
 
