--- a/competitions.html
+++ b/competitions.html
@@ -1,3 +1,4 @@
+```html
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -120,15 +121,20 @@
     }
 
     .top-row img {
-        width: 50%;
-        height: 260px;
+        width: 48%;
+        height: 220px;
         object-fit: cover;
         border-radius: 12px;
     }
 
+    .bottom-row {
+        display: flex;
+        justify-content: center;
+    }
+
     .bottom-row img {
-        width: 100%;
-        height: 320px;
+        width: 75%;
+        height: 250px;
         object-fit: cover;
         border-radius: 12px;
     }
@@ -149,8 +155,8 @@
 
         <h3 class="subheading">Challenge</h3>
         <p>
-            Complete a four-level autonomous manipulation task where increasing 
-            difficulty required vision-guided classification of objects by color 
+            Complete a four-level autonomous manipulation task where increasing
+            difficulty required vision-guided classification of objects by color
             and shape, followed by accurate placement into corresponding bins.
         </p>
 
@@ -190,3 +196,4 @@
 
 </body>
 </html>
+```
