--- a/competitions.html
+++ b/competitions.html
@@ -117,14 +117,14 @@
     .top-row {
         display: flex;
         gap: 20px;
-        margin-bottom: 20px;
+        
     }
 
     .top-row img {
-        width: 48%;
-        height: 220px;
-        object-fit: cover;
-        border-radius: 12px;
+         flex: 1;
+         aspect-ratio: 1 / 1;
+         object-fit: cover;
+         border-radius: 12px;
     }
 
     .bottom-row {
@@ -133,8 +133,8 @@
     }
 
     .bottom-row img {
-        width: 75%;
-        height: 250px;
+        width: 90%;
+        height: 200px;
         object-fit: cover;
         border-radius: 12px;
     }
