--- a/competitions.html
+++ b/competitions.html
@@ -117,7 +117,7 @@
     .top-row {
         display: flex;
         gap: 20px;
-        
+        margin-bottom: 20px;
     }
 
     .top-row img {
@@ -128,13 +128,12 @@
     }
 
     .bottom-row {
-        display: flex;
-        justify-content: center;
+         margin-top: 10px;
     }
 
     .bottom-row img {
-        width: 90%;
-        height: 200px;
+        width: 100%;
+        height: 280px;
         object-fit: cover;
         border-radius: 12px;
     }
