--- a/competitions.html
+++ b/competitions.html
@@ -160,7 +160,7 @@
 
         <div class="media-grid">
             <div class="top-row">
-                <img src="GroupPhoto.jpg" alt="Robot Grasping">
+                <img src="group-photo.jpeg" alt="Robot Grasping">
                 <img src="robot-setup.jpeg" alt="Object Sorting">
             </div>
 
