--- a/competitions.html
+++ b/competitions.html
@@ -209,8 +209,8 @@
         <h3 class="subheading">Technologies</h3>
         <ul>
             <li>Developed a YOLO-based object detection pipeline integrated with ICP pose refinement for accurate 6D pose estimation.</li>
-            <li>CHOMP-based collision-free motion planning with TOPP-RA for time-optimal trajectory parameterization.</li>
-            <li>Quintic polynomial trajectory interpolation for smooth robotic motion execution.</li>
+            <li>Designed a collision-free motion planner using CHOMP with TOPP-RA for time-optimal trajectory parameterization.</li>
+            <li>Implemented quintic polynomial trajectory interpolation to ensure smooth and stable robotic motion execution.</li>
             <li>Implemented the system in MATLAB & Simulink (Unity-based simulation)</li>
         </ul>
 
