--- a/competitions.html
+++ b/competitions.html
@@ -199,8 +199,8 @@
 
         <div class="media-grid">
             <div class="top-row">
-                <img src="icra-ranking.jpg" alt="Detection">
-                <img src="icra-robot.jpg" alt="Simulation">
+                <img src="icra-robot.jpg" alt="Detection">
+                <img src="icra-ranking.jpg" alt="Simulation">
             </div>
 
             
