--- a/competitions.html
+++ b/competitions.html
@@ -135,6 +135,16 @@
         object-fit: cover;
         border-radius: 12px;
     }
+    
+    .project2 .top-row img {
+        width: 350px;     /* Change as you like */
+        height: 220px;    /* Change as you like */
+    }
+
+    .project2 .bottom-row img {
+        width: 700px;     /* Change as you like */
+        height: 250px;    /* Change as you like */
+}
 </style>
 </head>
 
@@ -187,7 +197,7 @@
         </div>
     </div>
 
-    <div class="competition">
+    <div class="competition project2">
         <h2>RGMC, ICRA 2025 - Atlanta, USA</h2>
         <div class="location">Team Bytebots</div>
 
