--- a/index.html
+++ b/index.html
@@ -145,26 +145,28 @@
         <div class="card">
             <h3>6D Pose Estimation System</h3>
             <p>
-                Developed a real-time object pose estimation system using RealSense camera,
-                YOLO detection, and custom PnP solver integrated with ABB robot.
+                Enable real-time 6D object pose estimation for variable orientations
+                and integrate it with an ABB manipulator for adaptive pick-and-place
+                without fixed waypoint programming.
             </p>
             <a href="projects.html" class="btn">View Projects</a>
         </div>
 
         <div class="card">
-            <h3>ABB Robot Control via OPC UA</h3>
+            <h3>Intelligent Vision-Guided Sorting Using Dobot MG400</h3>
             <p>
-                Implemented industrial robot control using ROS2 and OPC UA gateway
-                without EGM for secure communication.
+                Enable automated classification and sorting of objects based on
+                material type and shape using a robotic manipulator instead of
+                manual sorting.
             </p>
             <a href="#" class="btn">View Project</a>
         </div>
 
         <div class="card">
-            <h3>YOLO + ArUco Vision System</h3>
+            <h3>Multi-Modal Human–Robot Interaction Platform</h3>
             <p>
-                Combined deep learning detection with ArUco pose estimation
-                for accurate robotic pick-and-place operations.
+                Enable a humanoid robot to understand spoken commands and perform
+                interactive behaviors through natural language communication.
             </p>
             <a href="#" class="btn">View Project</a>
         </div>
