--- a/index.html
+++ b/index.html
@@ -180,18 +180,20 @@
     <div class="card-container">
 
         <div class="card">
-            <h3>Robotics Challenge 2024</h3>
+            <h3>Robocup ARM 2023</h3>
             <p>
-                Designed and programmed an autonomous manipulation system
-                achieving top performance in perception accuracy.
+                Complete a four-level autonomous manipulation task where increasing
+                difficulty required vision-guided classification of objects by color
+                and shape, followed by accurate placement into corresponding bins.
             </p>
         </div>
 
         <div class="card">
-            <h3>AI Innovation Hackathon</h3>
+            <h3>RGMC, ICRA 2025 - Atlanta, USA</h3>
             <p>
-                Built an AI-based cost estimation model for manufacturing processes
-                using computer vision and regression techniques.
+                Design and implement a fully autonomous robotic manipulation system
+                capable of accurately detecting, localizing, and grasping YCB objects
+                in a competitive environment..
             </p>
         </div>
 
