--- a/projects.html
+++ b/projects.html
@@ -143,7 +143,7 @@
     </div>
 
     <!-- Project 2 -->
-    <div class="project">
+    <div class="project" id="dobot">
         <h2>Intelligent Vision-Guided Sorting Using Dobot MG400</h2>
 
         <h3 class="subheading">Challenge</h3>
