--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                 material type and shape using a robotic manipulator instead of
                 manual sorting.
             </p>
-            <a href="#" class="btn">View Project</a>
+            <a href="projects.html#dobot" class="btn">View Project</a>
         </div>
 
         <div class="card">
