--- a/projects.html
+++ b/projects.html
@@ -170,7 +170,7 @@
     </div>
 
     <!-- Project 3 -->
-    <div class="project">
+    <div class="project" id=yanshee>
         <h2>Multi-Modal Human–Robot Interaction Platform</h2>
 
         <h3 class="subheading">Challenge</h3>
