--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                 Enable a humanoid robot to understand spoken commands and perform
                 interactive behaviors through natural language communication.
             </p>
-            <a href="#" class="btn">View Project</a>
+            <a href="projects.html#yanshee" class="btn">View Project</a>
         </div>
 
     </div>
