--- a/projects.html
+++ b/projects.html
@@ -170,7 +170,7 @@
     </div>
 
     <!-- Project 3 -->
-    <div class="project" id=yanshee>
+    <div class="project" id="yanshee">
         <h2>Multi-Modal Human–Robot Interaction Platform</h2>
 
         <h3 class="subheading">Challenge</h3>
@@ -199,7 +199,7 @@
     </div>
 
     <!-- Project 4 (ADDED) -->
-    <div class="project">
+    <div class="project" id="AR">
         <h2>Augmented Reality Model-Target Android Application</h2>
 
         <h3 class="subheading">Challenge</h3>
