--- a/index.html
+++ b/index.html
@@ -186,6 +186,7 @@
                 difficulty required vision-guided classification of objects by color
                 and shape, followed by accurate placement into corresponding bins.
             </p>
+            <a href="competitions.html#icra" class="btn">View Project</a>
         </div>
 
         <div class="card">
