--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                 difficulty required vision-guided classification of objects by color
                 and shape, followed by accurate placement into corresponding bins.
             </p>
-            <a href="competitions.html#icra" class="btn">View Project</a>
+            <a href="competitions.html#robocup" class="btn">View Project</a>
         </div>
 
         <div class="card">
@@ -196,6 +196,7 @@
                 capable of accurately detecting, localizing, and grasping YCB objects
                 in a competitive environment..
             </p>
+            <a href="competitions.html#icra" class="btn">View Project</a>
         </div>
 
     </div>
