--- a/competitions.html
+++ b/competitions.html
@@ -152,7 +152,7 @@
 
 <section>
 
-    <div class="competition">
+    <div class="competition" id="robocup">
         <h2>RoboCup ARM Challenge 2023 - Bordeaux, France</h2>
         <div class="location">Dragons 77</div>
 
@@ -192,7 +192,7 @@
         </div>
     </div>
 
-    <div class="competition project2">
+    <div class="competition project2" id="icra">
         <h2>RGMC, ICRA 2025 - Atlanta, USA</h2>
         <div class="location">Team Bytebots</div>
 
