--- a/competitions.html
+++ b/competitions.html
@@ -137,8 +137,10 @@
     }
     
     .project2 .top-row img {
-        width: 450px;     /* Change as you like */
+        width: 500px;     /* Change as you like */
         height: 350px;    /* Change as you like */
+        object-fit: contain;
+        background: #0f172a;
     }
 </style>
 </head>
