--- a/competitions.html
+++ b/competitions.html
@@ -138,7 +138,7 @@
     
     .project2 .top-row img {
         width: 450px;     /* Change as you like */
-        height: 300px;    /* Change as you like */
+        height: auto;    /* Change as you like */
         object-fit: contain;
         background: #0f172a;
     }
