--- a/competitions.html
+++ b/competitions.html
@@ -137,7 +137,7 @@
     }
     
     .project2 .top-row img {
-        width: auto;     /* Change as you like */
+        width: 450px;     /* Change as you like */
         height: auto;    /* Change as you like */
         object-fit: contain;
         background: #0f172a;
