--- a/competitions.html
+++ b/competitions.html
@@ -137,8 +137,8 @@
     }
     
     .project2 .top-row img {
-        width: 450px;     /* Change as you like */
-        height: auto;    /* Change as you like */
+        width: 400px;     /* Change as you like */
+        height: 300px;    /* Change as you like */
         object-fit: contain;
         
     }
