--- a/competitions.html
+++ b/competitions.html
@@ -224,11 +224,11 @@
         <div class="media-grid">
             <div class="top-row">
                <div class="img-frame">
-                    <img src="images/icra1.png">
+                    <img src="icra-robot.jpg">
                </div>
 
                <div class="img-frame">
-                    <img src="images/icra2.png">
+                    <img src="icra-ranking.jpg">
                </div>
             </div>
 
