--- a/competitions.html
+++ b/competitions.html
@@ -143,8 +143,8 @@
         
     }
     .img-frame {
-        width: 420px;
-        height: 236px;
+        width: auto;
+        height: auto;
         
         border-radius: 14px;
         display: flex;
