--- a/index.html
+++ b/index.html
@@ -186,14 +186,15 @@
         </div>
 
         <div class="card">
-            <h3>Multi-Modal Human–Robot Interaction Platform</h3>
+            <h3>Augmented Reality Model-Target Android Application</h3>
             <p>
-                Enable a humanoid robot to understand spoken commands and perform
-                interactive behaviors through natural language communication.
+                Develop a mobile AR application capable of recognizing physical
+                objects using model targets and dynamically displaying contextual
+                information to the end user in real time.
             </p>
-            <a href="projects.html#yanshee" class="btn">View Project</a>
+            <a href="projects.html#AR" class="btn">View Project</a>
         </div>
-       
+        
     </div>
 </section>
 
@@ -213,11 +214,11 @@
         </div>
 
         <div class="card">
-            <h3>Augmented Reality Model-Target Android Application</h3>
+            <h3>RGMC, ICRA 2025 - Atlanta, USA</h3>
             <p>
-                Develop a mobile AR application capable of recognizing physical objects
-                using model targets and dynamically displaying contextual information 
-                to the end user in real time.
+                Design and implement a fully autonomous robotic manipulation system
+                capable of accurately detecting, localizing, and grasping YCB objects
+                in a competitive environment.
             </p>
             <a href="competitions.html#icra" class="btn">View Project</a>
         </div>
