--- a/index.html
+++ b/index.html
@@ -300,21 +300,25 @@
             <div class="paper-content">
 
                 <div class="paper-title">
-                    Active Vibration Fluidization for Granular Jamming Grippers
+                    Vision Based Automation system for Onion
+                    Grading Using Robotic Arm
                 </div>
 
                 <div class="paper-authors">
-                    Cameron Coombe; James Brett; Raghav Mishra; Gary W. Delaney; David Howard
+                    Rahul Suryawanshi, Jayesh Jagtap, Dnyaneshwari Shegokar, Siddhesh Jaju, Chandan M.N,
+                    Avinash M. Badadhe, Pranav Lad, Eric Fernandes
                 </div>
 
                 <div class="paper-conf">
-                    IEEE International Conference on Soft Robotics (RoboSoft), 2023
+                    IEEE 4th International Conference for Advancement in Technology (ICONAT), 2025
                 </div>
 
                 <div class="paper-desc">
-                    We augment a conventional universal gripper with a computer-controlled
-                    audio exciter to improve holding strength. An automated test rig
-                    enables large-scale data collection to explore the effects of active vibration.
+                     This paper presents the system development
+                     methodology, including hardware integration, algorithm devel
+                     opment and implementation. The experiments conducted on the
+                     system demonstrate the ability to detect and segregate onions
+                     effectively
                 </div>
 
                 <a href="#" class="btn">Read Paper</a>
